Composite tile prototype.

--- a/mods/cnc/mod.yaml
+++ b/mods/cnc/mod.yaml
@@ -25,6 +25,7 @@ RemasterModContent:
 		data|CNCDATA/TIBERIAN_DAWN/CD1/MOVIES.MIX
 		data|CNCDATA/TIBERIAN_DAWN/CD2/MOVIES.MIX
 		data|TEXTURES_TD_SRGB.MEG
+		data|TEXTURES_RA_SRGB.MEG
 		data|TEXTURES_COMMON_SRGB.MEG
 		data|SFX2D_EN-US.MEG
 		data|MUSIC.MEG
@@ -36,6 +37,7 @@ RemasterModContent:
 		base|scripts
 		base|uibits
 		cnc|bits
+		cnc|bits/desert
 		common|scripts
 
 MapFolders:
@@ -239,7 +241,7 @@ SupportsMapsFrom: cnc
 
 SoundFormats: Aud, Wav
 
-SpriteFormats: Tga, ShpTD, TmpTD, ShpTS, TmpRA, ShpRemastered, Dds
+SpriteFormats: Tga, ShpTD, TmpTD, ShpTS, TmpRA, ShpRemastered, Dds, PngSheet
 
 VideoFormats: Vqa
 
@@ -250,7 +252,7 @@ SpriteSequenceFormat: ClassicSpriteSequence
 ModelSequenceFormat: PlaceholderModelSequence
 
 AssetBrowser:
-	SpriteExtensions: .shp, .tem, .win, .sno, .des, .jun .ZIP
+	SpriteExtensions: .shp, .tem, .win, .sno, .des, .jun .ZIP, .png, .DDS
 	AudioExtensions: .aud, .wav, .v00, .v01, .v02, .v03, .var
 	VideoExtensions: .vqa, .wsa
 
